
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memset (int *,int ,int) ;
 int socket (int ,int ,int ) ;

int setsock(char *hostip,int port)
{
 int sock;
 struct hostent *he;
 struct sockaddr_in x82;

 if((he=gethostbyname(hostip))==((void*)0))
 {
  return(-1);
 }

 if((sock=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP))==-1)
 {
  return(-1);
 }

 x82.sin_family=AF_INET;
 x82.sin_port=htons(port);
 x82.sin_addr=*((struct in_addr *)he->h_addr);
 memset(&(x82.sin_zero),0,8);

 if(connect(sock,(struct sockaddr *)&x82,sizeof(struct sockaddr))==-1)
 {
  return(-1);
 }
 return(sock);
}
